--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <title>Alif Fiaz Muhammed</title>
 
-  <link rel="shortcut icon" href="../assets/download.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/download.png" type="image/x-icon">
 
   <link rel="stylesheet" type="text/css" href="assets/css/themify-icons.css">
 
